@@ -336,19 +336,37 @@
 <td>[m]</td>
 <td>uncertainty of the aerosol optical thickness</td>
 </tr>
-<tr class="row-even"><td><strong>snow_ice_type</strong></td>
+<tr class="row-even"><td><strong>surface_albedo</strong></td>
+<td>float</td>
+<td>{<em>time</em>}</td>
+<td>[]</td>
+<td>surface albedo</td>
+</tr>
+<tr class="row-odd"><td><strong>cloud_fraction</strong></td>
+<td>float</td>
+<td>{<em>time</em>}</td>
+<td>[]</td>
+<td>cloud fraction from the cloud product</td>
+</tr>
+<tr class="row-even"><td><strong>absorbing_aerosol_index</strong></td>
+<td>float</td>
+<td>{<em>time</em>}</td>
+<td>[]</td>
+<td>aerosol index</td>
+</tr>
+<tr class="row-odd"><td><strong>snow_ice_type</strong></td>
 <td>int8</td>
 <td>{<em>time</em>}</td>
 <td>&#160;</td>
 <td>surface snow/ice type; enumeration values: snow_free_land (0), sea_ice (1), permanent_ice (2), snow (3), ocean (4)</td>
 </tr>
-<tr class="row-odd"><td><strong>sea_ice_fraction</strong></td>
+<tr class="row-even"><td><strong>sea_ice_fraction</strong></td>
 <td>float</td>
 <td>{<em>time</em>}</td>
 <td>[]</td>
 <td>sea-ice concentration (as a fraction)</td>
 </tr>
-<tr class="row-even"><td><strong>index</strong></td>
+<tr class="row-odd"><td><strong>index</strong></td>
 <td>int32</td>
 <td>{<em>time</em>}</td>
 <td>&#160;</td>
@@ -514,18 +532,42 @@
 <td><em>path</em></td>
 <td><strong>/PRODUCT/SUPPORT_DATA/DETAILED_RESULTS/aerosol_optical_thickness_precision[]</strong></td>
 </tr>
-<tr class="row-even"><td rowspan="2"><strong>snow_ice_type</strong></td>
+<tr class="row-even"><td rowspan="3"><strong>surface_albedo</strong></td>
+<td><em>available</em></td>
+<td>optional</td>
+</tr>
+<tr class="row-odd"><td><em>condition</em></td>
+<td>processor version &gt;= 01.03.00</td>
+</tr>
+<tr class="row-even"><td><em>path</em></td>
+<td><strong>/PRODUCT/SUPPORT_DATA/DETAILED_RESULTS/surface_albedo[]</strong></td>
+</tr>
+<tr class="row-odd"><td rowspan="3"><strong>cloud_fraction</strong></td>
+<td><em>available</em></td>
+<td>optional</td>
+</tr>
+<tr class="row-even"><td><em>condition</em></td>
+<td>processor version &gt;= 01.03.00</td>
+</tr>
+<tr class="row-odd"><td><em>path</em></td>
+<td><strong>/PRODUCT/SUPPORT_DATA/INPUT_DATA/cloud_fraction[]</strong></td>
+</tr>
+<tr class="row-even"><td><strong>absorbing_aerosol_index</strong></td>
+<td><em>path</em></td>
+<td><strong>/PRODUCT/SUPPORT_DATA/INPUT_DATA/aerosol_index_354_388</strong></td>
+</tr>
+<tr class="row-odd"><td rowspan="2"><strong>snow_ice_type</strong></td>
 <td><em>path</em></td>
 <td><strong>/PRODUCT/SUPPORT_DATA/DETAILED_RESULTS/snow_ice_flag[]</strong></td>
 </tr>
-<tr class="row-odd"><td><em>description</em></td>
+<tr class="row-even"><td><em>description</em></td>
 <td>0: snow_free_land (0), 1-100: sea_ice (1), 101: permanent_ice (2), 103: snow (3), 255: ocean (4), other values map to -1</td>
 </tr>
-<tr class="row-even"><td rowspan="2"><strong>sea_ice_fraction</strong></td>
+<tr class="row-odd"><td rowspan="2"><strong>sea_ice_fraction</strong></td>
 <td><em>path</em></td>
 <td><strong>/PRODUCT/SUPPORT_DATA/DETAILED_RESULTS/snow_ice_flag[]</strong></td>
 </tr>
-<tr class="row-odd"><td><em>description</em></td>
+<tr class="row-even"><td><em>description</em></td>
 <td>if 1 &lt;= snow_ice_flag &lt;= 100 then snow_ice_flag/100.0 else 0.0</td>
 </tr>
 </tbody>
