@@ -1,3 +1,5 @@
+* Update to S5P L2 product ingestion.
+
 1.6 2019-04-29
 ~~~~~~~~~~~~~~
 
